added all filter types. added responder on client and server side

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 	<div class='textboxHeader'><div id='searchSubmit'>Search</div><input id='search'/></div>
 	<div class='textboxHeader'>
 		<div class='button' id='all'>All</div>
-		<div class='button'>Date</div>
-		<div class='button'>From</div>
-		<div class='button'>Responder</div>
-		<div class='button'>Subject</div>
+		<div class='button' id='date'>Date</div>
+		<div class='button' id='from'>From</div>
+		<div class='button' id='responder'>Responder</div>
 	</div>
 	<div class='textwindow'></div>
 	</div>
